fix to text overflow carousel on mobile.  clean up login handler code.  refactor update user page to not require inputting passwords twice to change password or keep the same.  will have separate page for change password later.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -54,7 +54,7 @@ footer {
 }
 
 .cliff_image {  
-  position: absolute;
+  position: fixed;
   max-width: 90%;
   height: 100%;
   margin-left: 0%;  
@@ -554,3 +554,13 @@ h1.counter > span {
   100%   { transform: translate(0, -0px); }   
 }
 
+.carousel_caption_text {
+  color: white;
+  background-color: rgba(52, 52, 52, 0.8);
+  max-height: 5em; /* Adjust the height as needed */
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 5; /* Maximum number of lines to display */
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
